--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Johann Tuffe <tafia973@gmail.com>"]
 glium = "*"
 image = "*"
 clock_ticks = "*"
+cgmath = "*"
 
 [dependencies.spine_tiny]
 git = "https://github.com/tafia/spine-rs.git"
